<resources>
    <string name="app_name">Feira de livros</string>
    <string name="btnCadastrarParticipante">Cadastrar participante</string>
    <string name="btnCadastrarReserva">Cadastrar reserva</string>
    <string name="btnCadastrarLivro">Cadastrar livro</string>
    <string name="hintEmail">Email</string>
    <string name="hintNome">Nome</string>
    <string name="activity_cadastrar_participante">Cadastrar participante</string>
    <string name="activity_cadastrar_livro">Cadastrar livro</string>
    <string name="activity_visualizar_livros">Livros cadastrados</string>
    <string name="activity_cadastrar_reserva">Cadastrar reserva</string>
    <string name="activity_detalhes_participante">Detalhes do participante</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="btnVoltar">Voltar</string>
    <string name="hintTitulo">Título</string>
    <string name="txtTitulo">Título</string>
    <string name="txtEditora">Editora</string>
    <string name="txtAno">Ano</string>
    <string name="btnVisualizarLivros">Visualizar livros</string>
    <string name="labelEscolherParticipante">Escolha o participante:</string>
    <string name="labelEscolherLivro">Escolha o livro:</string>
    <string name="labelParticipantes">Participantes:</string>
    <string name="labelReservado">Reservado pelo(s) participante(s):</string>
    <string name="labelTitulo">Título:</string>
    <string name="labelAno">Ano:</string>
    <string name="labelEditora">Editora:</string>
    <string name="title_activity_layout_participante">layout_participante</string>
    <string name="labelNomeParticipante">Nome:</string>
    <string name="labelEmailParticipante">E-mail:</string>
</resources>
