<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diego.feiradelivros.CadastroLivro">

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCadastrar"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="232dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAno"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtAno"
        android:layout_width="357dp"
        android:layout_height="53dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txtAno"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditora" />

    <EditText
        android:id="@+id/txtEditora"
        android:layout_width="357dp"
        android:layout_height="53dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txtEditora"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <EditText
        android:id="@+id/txtTitulo"
        android:layout_width="357dp"
        android:layout_height="53dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txtTitulo"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
